--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -1,33 +1,68 @@
-<div flex style="min-width: 1015px; min-height: 920px;" ng-controller="ReceptorStatusCtrl as vm">
-    <div class="legend-popup" style="background: transparent; pointer-events: none;" layout="row" ng-init="transparentLegend = true"
-         ng-class="{'transparent-legend':transparentLegend && !showLegend}">
-        <md-button flex style="pointer-events: auto; width: 36px; height: 40px;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false" ng-click="showLegend = !showLegend"
-                   ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true"
-                    class="md-primary md-raised md-icon-button">
-            <md-icon md-theme="white" class="fa md-primary" ng-show="!showLegend" md-font-icon="fa-eye" title="Show Legend"></md-icon>
-            <md-icon md-theme="white" class="fa md-primary" ng-show="showLegend" md-font-icon="fa-eye-slash" title="Hide Legend"></md-icon>
-        </md-button>
-        <div class="md-whiteframe-z3" layout="column" ng-show="showLegend" style="background: white; padding: 8px;">
-            <div layout="row" layout-align="start center"><div class="color-patch unknown-child" title="Grey"></div><span>Unknown</span></div>
-            <div layout="row" layout-align="start center"><div class="color-patch nominal-child" title="Green"></div><span>Nominal</span></div>
-            <div layout="row" layout-align="start center"><div class="color-patch warn-child" title="Amber"></div><span>Warn</span></div>
-            <div layout="row" layout-align="start center"><div class="color-patch error-child" title="Red"></div><span>Error</span></div>
-            <div layout="row" layout-align="start center"><div class="color-patch failure-child" title="Blue"></div><span>Failure</span></div>
-            <div layout="row" layout-align="start center"><div class="color-patch unreachable-child" title="Pink"></div><span>Unreachable</span></div>
-            <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Black"></div><span>CAM Sensor Error</span></div>
-        </div>
-    </div>
-    <div style="padding-left:16px; padding-right:16px; padding-top:8px;">
-        <div md-theme="{{themePrimary}}" class="" layout="row" layout-align="start center" class="md-toolbar-tools-small">
+<div flex ng-controller="ReceptorStatusCtrl as vm" layout="column" layout-align="start"
+     style="margin: 16px;">
 
-            <span flex></span>
-            <md-select ng-model="vm.mapType" style="margin-top: 0px; margin-left: 4px; margin-right:8px;"
-                       class="md-primary" md-theme="{{themePrimaryButtons}}">
-                <md-option ng-value="type" ng-repeat="type in vm.mapTypes">{{type}}</md-option>
-            </md-select>
+    <div layout="column" layout-align="center center">
+        <div class="md-whiteframe-z1">
+            <div layout="row">
+                <span class="receptor-status-row-span"></span>
 
+                <div ng-repeat="receptor in vm.receptorsData track by $index"
+                     class="receptor-status-column-heading" layout="column" layout-align="center center"
+                     ng-class="{'in-maintenance-item':receptor.in_maintenance}">
+                    <span>{{receptor.name}}</span>
+                </div>
+            </div>
+            <div>
+                <div layout="row">
+                    <div class="receptor-status-row-span" layout-align="start center" layout="row">
+                        <span>Health - Sensors OK</span>
+                    </div>
+                    <div ng-repeat="receptor in vm.receptorsData track by $index"
+                         class="receptor-status-column-heading"
+                         layout="column" layout-align="center center"
+                         ng-class="{'error-item':!receptor.sensors_ok.value}">
+                        <!--<span>{{receptor.sensors_ok.value}}</span>-->
+                    </div>
+                </div>
+                <div layout="row">
+                    <div class="receptor-status-row-span" layout-align="start center" layout="row">
+                        <span>Mode</span>
+                    </div>
+                    <div ng-repeat="receptor in vm.receptorsData track by $index"
+                         class="receptor-status-column-heading nominal-item"
+                         layout="column" layout-align="center center"
+                         ng-class="{'stop-item': receptor.mode.value === 'STOP', 'stow-item': receptor.mode.value === 'STOW', 'error-item': receptor.mode.value === 'WINDSTOW','inhibited-item':receptor.inhibited.value}">
+                        <span ng-show="!receptor.inhibited.value">{{receptor.mode.value}}</span>
+                        <span ng-show="receptor.inhibited.value">INHIBITED</span>
+                    </div>
+                </div>
+                <div layout="row">
+                    <div class="receptor-status-row-span" layout-align="start center" layout="row">
+                        <span>Assigned/Allocated</span>
+                    </div>
+                    <!--leave vm.getReceptorSubarray(receptor) in there so that it gets called with every digest-->
+                    <div ng-repeat="receptor in vm.receptorsData track by $index"
+                         class="receptor-status-column-heading"
+                         layout="column" layout-align="center center"
+                         ng-class="{'in-maintenance-item':receptor.in_maintenance && !(receptor.assignedSubarray || receptor.allocatedSubarray), 'in-assigned-subarray-item': receptor.assignedSubarray, 'in-allocated-subarray-item': receptor.allocatedSubarray}">
+                        <span ng-show="false">{{vm.getReceptorSubarray(receptor)}}</span>
+                        <span ng-show="receptor.subarray">Sub-Array {{receptor.subarray}}</span>
+                        <span ng-show="!receptor.subarray">Free</span>
+                        <!--<span ng-show="receptor.allocation">SB {{receptor.allocation[1]}}</span>-->
+                    </div>
+                </div>
+                <div layout="row">
+                    <div class="receptor-status-row-span" layout-align="start center" layout="row">
+                        <span>QA1</span>
+                    </div>
+                    <div ng-repeat="receptor in vm.receptorsData track by $index"
+                         class="receptor-status-column-heading"
+                         layout="column" layout-align="center center">
+                        <span>{{receptor.qa1}}</span>
+                    </div>
+                </div>
+            </div>
         </div>
-        <receptor-status-list flex></receptor-status-list>
     </div>
 
 </div>
