--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -1,6 +1,27 @@
 <div flex ng-controller="ReceptorStatusCtrl as vm" layout="column" layout-align="start"
      style="margin: 16px;">
 
+    <div class="legend-popup" style="background: transparent; pointer-events: none;" layout="row" ng-init="transparentLegend = true"
+         ng-class="{'transparent-legend':transparentLegend && !showLegend}">
+        <md-button flex style="pointer-events: auto; width: 36px; height: 40px;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false" ng-click="showLegend = !showLegend"
+                   ng-mouseenter="transparentLegend = false" ng-mouseleave="transparentLegend = true"
+                   class="md-primary md-raised md-icon-button">
+            <md-icon md-theme="white" class="fa md-primary" ng-show="!showLegend" md-font-icon="fa-eye" title="Show Legend"></md-icon>
+            <md-icon md-theme="white" class="fa md-primary" ng-show="showLegend" md-font-icon="fa-eye-slash" title="Hide Legend"></md-icon>
+        </md-button>
+        <div class="md-whiteframe-z3" layout="column" ng-show="showLegend" style="background: white; padding: 8px;">
+            <div layout="row" layout-align="start center"><div class="color-patch nominal-child" title="Green"></div><span>Health - OK</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch unknown-child" title="Grey"></div><span>Mode - Stop</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch warn-child" title="Amber"></div><span>Mode - Inhibited</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch stow-item" title="Blue"></div><span>Mode - Stow</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch in-assigned-subarray-item" title="Light Green"></div><span>Assigned</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch in-allocated-subarray-item" title="Light Blue"></div><span>Allocated</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch in-maintenance-item" title="Purple"></div><span>In Maintenance</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch error-item" title="Red"></div><span>In Error</span></div>
+            <div layout="row" layout-align="start center"><div style="border: 1px solid #d3d3d3" class="color-patch" title="White"></div><span>Nothin to Report</span></div>
+        </div>
+    </div>
+
     <div layout="column" layout-align="center center">
         <div class="md-whiteframe-z1">
             <div layout="row">
@@ -35,6 +56,8 @@
                         <span ng-show="!receptor.windstow_active.value">{{receptor.mode.value}}</span>
                         <span ng-show="receptor.windstow_active.value">WINDSTOW</span>
                         <span style="width: 100%; text-align: center; border: 1px solid #333333;" class="inhibited-item" ng-show="receptor.inhibited.value">INHIBITED</span>
+                        <span ng-show="receptor.lock.value" class="fa fa-asterisk on-target-span"
+                              title="AP on Target"></span>
                     </div>
                 </div>
                 <div layout="row">
